--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,6 @@ repositories {
 
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.13.1'
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.11.4")
     testImplementation('org.mockito:mockito-core:2.1.0')
 }
