--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,13 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
-    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.11.4")
-    testImplementation('org.mockito:mockito-core:2.1.0')
+    testImplementation("org.mockito:mockito-core:5.17.0")
+    testImplementation("org.mockito:mockito-junit-jupiter:2.17.0")
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.3.1')
+    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.3.1')
 }
