--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,5 @@ dependencies {
     testImplementation("org.mockito:mockito-junit-jupiter:2.17.0")
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.3.1')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.3.1')
+    testImplementation 'org.mockito:mockito-core:4.0.0'
 }
